# TextStats

./: .gitignore  CMakeLists.txt  CallbackManager.cpp  CallbackManager.h  CommandLineArgsParser.cpp  CommandLineArgsParser.h  Functions.cpp  Functions.h  InvalidCmdArgumentsException.h  OperationsHandler.cpp  OperationsHandler.h  README.md  main.cpp
src/: CallbackManager.cpp  CallbackManager.h  CommandLineArgsParser.h  Functions.cpp  Functions.h
